--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
             </p>
         </section>
         <section id="online-reputation-management">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTRQrjSrqE4by8gOoIydiUc50BG9ri76nTz0w&usqp=CAU" class="float-right" />
+            <img src="assets\images\online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
         <section id="social-media-marketing">
-            <img src="https://us.123rf.com/450wm/liliyafilakhtova/liliyafilakhtova2304/liliyafilakhtova230400031/202293477-modern-art-fantasy-peacock-luxury-digital-art-generative-ai.jpg?ver=6" class="float-left" />
+            <img src="assets\images\social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -51,30 +51,30 @@
     <aside class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="https://img.freepik.com/premium-vector/lead-generation-line-concept-simple-line-icon-colored-illustration-lead-generation-symbol-flat-design-can-be-used-ui-ux_159242-4367.jpg" />
+            <img src="assets\images\lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
         <section class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="https://p7.hiclipart.com/preview/155/158/361/brand-awareness-logo-marketing-marketing.jpg" />
+            <img src="assets\images\brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
         <section class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="https://as1.ftcdn.net/v2/jpg/02/24/86/32/1000_F_224863230_vs8GhFKtoZct36QsO5AFXgNseIEi01Lm.jpg" />
+            <img src="assets\images\cost-management.png" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </section>
     </aside>
     <footer>
-        <h2>Made with ❤️️ by Christa Lococo</h2>
+        <h2>Made with ❤️️ by Horiseon</h2>
         <p>
-            &copy; 2023 Christa Lococo.
+            &copy; 2023 Horiseon.
         </p>
     </footer>
 </body>
